fix della profile-pic che stretchava in chat

--- a/frontend/src/components/css/Chat.css
+++ b/frontend/src/components/css/Chat.css
@@ -28,6 +28,7 @@
     width: 45px;
     height: 45px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .header .text > *{
